--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar">
       <div class="container">
-        <div class="logo">House of MADA</div>
+        <div class="logo">MADA</div>
         <ul class="nav">
           <li>
             <a href="#">Home</a>
